parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> arithmetic_instruction
Rule 5     instruction -> comparison_instruction
Rule 6     instruction -> memory_instruction
Rule 7     instruction -> jump_instruction
Rule 8     instruction -> stall_instruction
Rule 9     instruction -> settear_instruction
Rule 10    instruction -> label_instruction
Rule 11    instruction -> end_instruction
Rule 12    arithmetic_instruction -> ADD REG coma REG coma REG
Rule 13    arithmetic_instruction -> SUB REG coma REG coma REG
Rule 14    arithmetic_instruction -> AND REG coma REG coma REG
Rule 15    arithmetic_instruction -> ORR REG coma REG coma REG
Rule 16    arithmetic_instruction -> LSL REG coma REG coma REG
Rule 17    comparison_instruction -> CMP REG coma REG
Rule 18    comparison_instruction -> CMP REG coma INTEGER
Rule 19    memory_instruction -> LDR REG coma PARENTL REG PARENTR
Rule 20    memory_instruction -> STR REG coma PARENTL REG PARENTR
Rule 21    settear_instruction -> SET REG coma INTEGER
Rule 22    settear_instruction -> SET REG coma REG
Rule 23    jump_instruction -> BAL LABEL
Rule 24    jump_instruction -> BEQ LABEL
Rule 25    jump_instruction -> BGE LABEL
Rule 26    label_instruction -> LABEL
Rule 27    stall_instruction -> NOT
Rule 28    end_instruction -> END

Terminals, with rules where they appear

ADD                  : 12
AND                  : 14
BAL                  : 23
BEQ                  : 24
BGE                  : 25
CMP                  : 17 18
END                  : 28
INTEGER              : 18 21
LABEL                : 23 24 25 26
LDR                  : 19
LSL                  : 16
NOT                  : 27
ORR                  : 15
PARENTL              : 19 20
PARENTR              : 19 20
REG                  : 12 12 12 13 13 13 14 14 14 15 15 15 16 16 16 17 17 18 19 19 20 20 21 22 22
SET                  : 21 22
STR                  : 20
SUB                  : 13
coma                 : 12 12 13 13 14 14 15 15 16 16 17 18 19 20 21 22
error                : 

Nonterminals, with rules where they appear

arithmetic_instruction : 4
comparison_instruction : 5
end_instruction      : 11
instruction          : 2 3
instructions         : 1 2
jump_instruction     : 7
label_instruction    : 10
memory_instruction   : 6
program              : 0
settear_instruction  : 9
stall_instruction    : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . arithmetic_instruction
    (5) instruction -> . comparison_instruction
    (6) instruction -> . memory_instruction
    (7) instruction -> . jump_instruction
    (8) instruction -> . stall_instruction
    (9) instruction -> . settear_instruction
    (10) instruction -> . label_instruction
    (11) instruction -> . end_instruction
    (12) arithmetic_instruction -> . ADD REG coma REG coma REG
    (13) arithmetic_instruction -> . SUB REG coma REG coma REG
    (14) arithmetic_instruction -> . AND REG coma REG coma REG
    (15) arithmetic_instruction -> . ORR REG coma REG coma REG
    (16) arithmetic_instruction -> . LSL REG coma REG coma REG
    (17) comparison_instruction -> . CMP REG coma REG
    (18) comparison_instruction -> . CMP REG coma INTEGER
    (19) memory_instruction -> . LDR REG coma PARENTL REG PARENTR
    (20) memory_instruction -> . STR REG coma PARENTL REG PARENTR
    (23) jump_instruction -> . BAL LABEL
    (24) jump_instruction -> . BEQ LABEL
    (25) jump_instruction -> . BGE LABEL
    (27) stall_instruction -> . NOT
    (21) settear_instruction -> . SET REG coma INTEGER
    (22) settear_instruction -> . SET REG coma REG
    (26) label_instruction -> . LABEL
    (28) end_instruction -> . END

    ADD             shift and go to state 12
    SUB             shift and go to state 13
    AND             shift and go to state 14
    ORR             shift and go to state 15
    LSL             shift and go to state 16
    CMP             shift and go to state 17
    LDR             shift and go to state 18
    STR             shift and go to state 19
    BAL             shift and go to state 20
    BEQ             shift and go to state 22
    BGE             shift and go to state 23
    NOT             shift and go to state 24
    SET             shift and go to state 25
    LABEL           shift and go to state 21
    END             shift and go to state 26

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    arithmetic_instruction         shift and go to state 4
    comparison_instruction         shift and go to state 5
    memory_instruction             shift and go to state 6
    jump_instruction               shift and go to state 7
    stall_instruction              shift and go to state 8
    settear_instruction            shift and go to state 9
    label_instruction              shift and go to state 10
    end_instruction                shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . arithmetic_instruction
    (5) instruction -> . comparison_instruction
    (6) instruction -> . memory_instruction
    (7) instruction -> . jump_instruction
    (8) instruction -> . stall_instruction
    (9) instruction -> . settear_instruction
    (10) instruction -> . label_instruction
    (11) instruction -> . end_instruction
    (12) arithmetic_instruction -> . ADD REG coma REG coma REG
    (13) arithmetic_instruction -> . SUB REG coma REG coma REG
    (14) arithmetic_instruction -> . AND REG coma REG coma REG
    (15) arithmetic_instruction -> . ORR REG coma REG coma REG
    (16) arithmetic_instruction -> . LSL REG coma REG coma REG
    (17) comparison_instruction -> . CMP REG coma REG
    (18) comparison_instruction -> . CMP REG coma INTEGER
    (19) memory_instruction -> . LDR REG coma PARENTL REG PARENTR
    (20) memory_instruction -> . STR REG coma PARENTL REG PARENTR
    (23) jump_instruction -> . BAL LABEL
    (24) jump_instruction -> . BEQ LABEL
    (25) jump_instruction -> . BGE LABEL
    (27) stall_instruction -> . NOT
    (21) settear_instruction -> . SET REG coma INTEGER
    (22) settear_instruction -> . SET REG coma REG
    (26) label_instruction -> . LABEL
    (28) end_instruction -> . END

    $end            reduce using rule 1 (program -> instructions .)
    ADD             shift and go to state 12
    SUB             shift and go to state 13
    AND             shift and go to state 14
    ORR             shift and go to state 15
    LSL             shift and go to state 16
    CMP             shift and go to state 17
    LDR             shift and go to state 18
    STR             shift and go to state 19
    BAL             shift and go to state 20
    BEQ             shift and go to state 22
    BGE             shift and go to state 23
    NOT             shift and go to state 24
    SET             shift and go to state 25
    LABEL           shift and go to state 21
    END             shift and go to state 26

    instruction                    shift and go to state 27
    arithmetic_instruction         shift and go to state 4
    comparison_instruction         shift and go to state 5
    memory_instruction             shift and go to state 6
    jump_instruction               shift and go to state 7
    stall_instruction              shift and go to state 8
    settear_instruction            shift and go to state 9
    label_instruction              shift and go to state 10
    end_instruction                shift and go to state 11

state 3

    (3) instructions -> instruction .

    ADD             reduce using rule 3 (instructions -> instruction .)
    SUB             reduce using rule 3 (instructions -> instruction .)
    AND             reduce using rule 3 (instructions -> instruction .)
    ORR             reduce using rule 3 (instructions -> instruction .)
    LSL             reduce using rule 3 (instructions -> instruction .)
    CMP             reduce using rule 3 (instructions -> instruction .)
    LDR             reduce using rule 3 (instructions -> instruction .)
    STR             reduce using rule 3 (instructions -> instruction .)
    BAL             reduce using rule 3 (instructions -> instruction .)
    BEQ             reduce using rule 3 (instructions -> instruction .)
    BGE             reduce using rule 3 (instructions -> instruction .)
    NOT             reduce using rule 3 (instructions -> instruction .)
    SET             reduce using rule 3 (instructions -> instruction .)
    LABEL           reduce using rule 3 (instructions -> instruction .)
    END             reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> arithmetic_instruction .

    ADD             reduce using rule 4 (instruction -> arithmetic_instruction .)
    SUB             reduce using rule 4 (instruction -> arithmetic_instruction .)
    AND             reduce using rule 4 (instruction -> arithmetic_instruction .)
    ORR             reduce using rule 4 (instruction -> arithmetic_instruction .)
    LSL             reduce using rule 4 (instruction -> arithmetic_instruction .)
    CMP             reduce using rule 4 (instruction -> arithmetic_instruction .)
    LDR             reduce using rule 4 (instruction -> arithmetic_instruction .)
    STR             reduce using rule 4 (instruction -> arithmetic_instruction .)
    BAL             reduce using rule 4 (instruction -> arithmetic_instruction .)
    BEQ             reduce using rule 4 (instruction -> arithmetic_instruction .)
    BGE             reduce using rule 4 (instruction -> arithmetic_instruction .)
    NOT             reduce using rule 4 (instruction -> arithmetic_instruction .)
    SET             reduce using rule 4 (instruction -> arithmetic_instruction .)
    LABEL           reduce using rule 4 (instruction -> arithmetic_instruction .)
    END             reduce using rule 4 (instruction -> arithmetic_instruction .)
    $end            reduce using rule 4 (instruction -> arithmetic_instruction .)


state 5

    (5) instruction -> comparison_instruction .

    ADD             reduce using rule 5 (instruction -> comparison_instruction .)
    SUB             reduce using rule 5 (instruction -> comparison_instruction .)
    AND             reduce using rule 5 (instruction -> comparison_instruction .)
    ORR             reduce using rule 5 (instruction -> comparison_instruction .)
    LSL             reduce using rule 5 (instruction -> comparison_instruction .)
    CMP             reduce using rule 5 (instruction -> comparison_instruction .)
    LDR             reduce using rule 5 (instruction -> comparison_instruction .)
    STR             reduce using rule 5 (instruction -> comparison_instruction .)
    BAL             reduce using rule 5 (instruction -> comparison_instruction .)
    BEQ             reduce using rule 5 (instruction -> comparison_instruction .)
    BGE             reduce using rule 5 (instruction -> comparison_instruction .)
    NOT             reduce using rule 5 (instruction -> comparison_instruction .)
    SET             reduce using rule 5 (instruction -> comparison_instruction .)
    LABEL           reduce using rule 5 (instruction -> comparison_instruction .)
    END             reduce using rule 5 (instruction -> comparison_instruction .)
    $end            reduce using rule 5 (instruction -> comparison_instruction .)


state 6

    (6) instruction -> memory_instruction .

    ADD             reduce using rule 6 (instruction -> memory_instruction .)
    SUB             reduce using rule 6 (instruction -> memory_instruction .)
    AND             reduce using rule 6 (instruction -> memory_instruction .)
    ORR             reduce using rule 6 (instruction -> memory_instruction .)
    LSL             reduce using rule 6 (instruction -> memory_instruction .)
    CMP             reduce using rule 6 (instruction -> memory_instruction .)
    LDR             reduce using rule 6 (instruction -> memory_instruction .)
    STR             reduce using rule 6 (instruction -> memory_instruction .)
    BAL             reduce using rule 6 (instruction -> memory_instruction .)
    BEQ             reduce using rule 6 (instruction -> memory_instruction .)
    BGE             reduce using rule 6 (instruction -> memory_instruction .)
    NOT             reduce using rule 6 (instruction -> memory_instruction .)
    SET             reduce using rule 6 (instruction -> memory_instruction .)
    LABEL           reduce using rule 6 (instruction -> memory_instruction .)
    END             reduce using rule 6 (instruction -> memory_instruction .)
    $end            reduce using rule 6 (instruction -> memory_instruction .)


state 7

    (7) instruction -> jump_instruction .

    ADD             reduce using rule 7 (instruction -> jump_instruction .)
    SUB             reduce using rule 7 (instruction -> jump_instruction .)
    AND             reduce using rule 7 (instruction -> jump_instruction .)
    ORR             reduce using rule 7 (instruction -> jump_instruction .)
    LSL             reduce using rule 7 (instruction -> jump_instruction .)
    CMP             reduce using rule 7 (instruction -> jump_instruction .)
    LDR             reduce using rule 7 (instruction -> jump_instruction .)
    STR             reduce using rule 7 (instruction -> jump_instruction .)
    BAL             reduce using rule 7 (instruction -> jump_instruction .)
    BEQ             reduce using rule 7 (instruction -> jump_instruction .)
    BGE             reduce using rule 7 (instruction -> jump_instruction .)
    NOT             reduce using rule 7 (instruction -> jump_instruction .)
    SET             reduce using rule 7 (instruction -> jump_instruction .)
    LABEL           reduce using rule 7 (instruction -> jump_instruction .)
    END             reduce using rule 7 (instruction -> jump_instruction .)
    $end            reduce using rule 7 (instruction -> jump_instruction .)


state 8

    (8) instruction -> stall_instruction .

    ADD             reduce using rule 8 (instruction -> stall_instruction .)
    SUB             reduce using rule 8 (instruction -> stall_instruction .)
    AND             reduce using rule 8 (instruction -> stall_instruction .)
    ORR             reduce using rule 8 (instruction -> stall_instruction .)
    LSL             reduce using rule 8 (instruction -> stall_instruction .)
    CMP             reduce using rule 8 (instruction -> stall_instruction .)
    LDR             reduce using rule 8 (instruction -> stall_instruction .)
    STR             reduce using rule 8 (instruction -> stall_instruction .)
    BAL             reduce using rule 8 (instruction -> stall_instruction .)
    BEQ             reduce using rule 8 (instruction -> stall_instruction .)
    BGE             reduce using rule 8 (instruction -> stall_instruction .)
    NOT             reduce using rule 8 (instruction -> stall_instruction .)
    SET             reduce using rule 8 (instruction -> stall_instruction .)
    LABEL           reduce using rule 8 (instruction -> stall_instruction .)
    END             reduce using rule 8 (instruction -> stall_instruction .)
    $end            reduce using rule 8 (instruction -> stall_instruction .)


state 9

    (9) instruction -> settear_instruction .

    ADD             reduce using rule 9 (instruction -> settear_instruction .)
    SUB             reduce using rule 9 (instruction -> settear_instruction .)
    AND             reduce using rule 9 (instruction -> settear_instruction .)
    ORR             reduce using rule 9 (instruction -> settear_instruction .)
    LSL             reduce using rule 9 (instruction -> settear_instruction .)
    CMP             reduce using rule 9 (instruction -> settear_instruction .)
    LDR             reduce using rule 9 (instruction -> settear_instruction .)
    STR             reduce using rule 9 (instruction -> settear_instruction .)
    BAL             reduce using rule 9 (instruction -> settear_instruction .)
    BEQ             reduce using rule 9 (instruction -> settear_instruction .)
    BGE             reduce using rule 9 (instruction -> settear_instruction .)
    NOT             reduce using rule 9 (instruction -> settear_instruction .)
    SET             reduce using rule 9 (instruction -> settear_instruction .)
    LABEL           reduce using rule 9 (instruction -> settear_instruction .)
    END             reduce using rule 9 (instruction -> settear_instruction .)
    $end            reduce using rule 9 (instruction -> settear_instruction .)


state 10

    (10) instruction -> label_instruction .

    ADD             reduce using rule 10 (instruction -> label_instruction .)
    SUB             reduce using rule 10 (instruction -> label_instruction .)
    AND             reduce using rule 10 (instruction -> label_instruction .)
    ORR             reduce using rule 10 (instruction -> label_instruction .)
    LSL             reduce using rule 10 (instruction -> label_instruction .)
    CMP             reduce using rule 10 (instruction -> label_instruction .)
    LDR             reduce using rule 10 (instruction -> label_instruction .)
    STR             reduce using rule 10 (instruction -> label_instruction .)
    BAL             reduce using rule 10 (instruction -> label_instruction .)
    BEQ             reduce using rule 10 (instruction -> label_instruction .)
    BGE             reduce using rule 10 (instruction -> label_instruction .)
    NOT             reduce using rule 10 (instruction -> label_instruction .)
    SET             reduce using rule 10 (instruction -> label_instruction .)
    LABEL           reduce using rule 10 (instruction -> label_instruction .)
    END             reduce using rule 10 (instruction -> label_instruction .)
    $end            reduce using rule 10 (instruction -> label_instruction .)


state 11

    (11) instruction -> end_instruction .

    ADD             reduce using rule 11 (instruction -> end_instruction .)
    SUB             reduce using rule 11 (instruction -> end_instruction .)
    AND             reduce using rule 11 (instruction -> end_instruction .)
    ORR             reduce using rule 11 (instruction -> end_instruction .)
    LSL             reduce using rule 11 (instruction -> end_instruction .)
    CMP             reduce using rule 11 (instruction -> end_instruction .)
    LDR             reduce using rule 11 (instruction -> end_instruction .)
    STR             reduce using rule 11 (instruction -> end_instruction .)
    BAL             reduce using rule 11 (instruction -> end_instruction .)
    BEQ             reduce using rule 11 (instruction -> end_instruction .)
    BGE             reduce using rule 11 (instruction -> end_instruction .)
    NOT             reduce using rule 11 (instruction -> end_instruction .)
    SET             reduce using rule 11 (instruction -> end_instruction .)
    LABEL           reduce using rule 11 (instruction -> end_instruction .)
    END             reduce using rule 11 (instruction -> end_instruction .)
    $end            reduce using rule 11 (instruction -> end_instruction .)


state 12

    (12) arithmetic_instruction -> ADD . REG coma REG coma REG

    REG             shift and go to state 28


state 13

    (13) arithmetic_instruction -> SUB . REG coma REG coma REG

    REG             shift and go to state 29


state 14

    (14) arithmetic_instruction -> AND . REG coma REG coma REG

    REG             shift and go to state 30


state 15

    (15) arithmetic_instruction -> ORR . REG coma REG coma REG

    REG             shift and go to state 31


state 16

    (16) arithmetic_instruction -> LSL . REG coma REG coma REG

    REG             shift and go to state 32


state 17

    (17) comparison_instruction -> CMP . REG coma REG
    (18) comparison_instruction -> CMP . REG coma INTEGER

    REG             shift and go to state 33


state 18

    (19) memory_instruction -> LDR . REG coma PARENTL REG PARENTR

    REG             shift and go to state 34


state 19

    (20) memory_instruction -> STR . REG coma PARENTL REG PARENTR

    REG             shift and go to state 35


state 20

    (23) jump_instruction -> BAL . LABEL

    LABEL           shift and go to state 36


state 21

    (26) label_instruction -> LABEL .

    ADD             reduce using rule 26 (label_instruction -> LABEL .)
    SUB             reduce using rule 26 (label_instruction -> LABEL .)
    AND             reduce using rule 26 (label_instruction -> LABEL .)
    ORR             reduce using rule 26 (label_instruction -> LABEL .)
    LSL             reduce using rule 26 (label_instruction -> LABEL .)
    CMP             reduce using rule 26 (label_instruction -> LABEL .)
    LDR             reduce using rule 26 (label_instruction -> LABEL .)
    STR             reduce using rule 26 (label_instruction -> LABEL .)
    BAL             reduce using rule 26 (label_instruction -> LABEL .)
    BEQ             reduce using rule 26 (label_instruction -> LABEL .)
    BGE             reduce using rule 26 (label_instruction -> LABEL .)
    NOT             reduce using rule 26 (label_instruction -> LABEL .)
    SET             reduce using rule 26 (label_instruction -> LABEL .)
    LABEL           reduce using rule 26 (label_instruction -> LABEL .)
    END             reduce using rule 26 (label_instruction -> LABEL .)
    $end            reduce using rule 26 (label_instruction -> LABEL .)


state 22

    (24) jump_instruction -> BEQ . LABEL

    LABEL           shift and go to state 37


state 23

    (25) jump_instruction -> BGE . LABEL

    LABEL           shift and go to state 38


state 24

    (27) stall_instruction -> NOT .

    ADD             reduce using rule 27 (stall_instruction -> NOT .)
    SUB             reduce using rule 27 (stall_instruction -> NOT .)
    AND             reduce using rule 27 (stall_instruction -> NOT .)
    ORR             reduce using rule 27 (stall_instruction -> NOT .)
    LSL             reduce using rule 27 (stall_instruction -> NOT .)
    CMP             reduce using rule 27 (stall_instruction -> NOT .)
    LDR             reduce using rule 27 (stall_instruction -> NOT .)
    STR             reduce using rule 27 (stall_instruction -> NOT .)
    BAL             reduce using rule 27 (stall_instruction -> NOT .)
    BEQ             reduce using rule 27 (stall_instruction -> NOT .)
    BGE             reduce using rule 27 (stall_instruction -> NOT .)
    NOT             reduce using rule 27 (stall_instruction -> NOT .)
    SET             reduce using rule 27 (stall_instruction -> NOT .)
    LABEL           reduce using rule 27 (stall_instruction -> NOT .)
    END             reduce using rule 27 (stall_instruction -> NOT .)
    $end            reduce using rule 27 (stall_instruction -> NOT .)


state 25

    (21) settear_instruction -> SET . REG coma INTEGER
    (22) settear_instruction -> SET . REG coma REG

    REG             shift and go to state 39


state 26

    (28) end_instruction -> END .
